BOMA-PBL-PROJECT-21-25/project-25-kubernetes-5/artifactory-ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: artifactory
spec:
  rules:
  - host: "tooling.artifactory.bomatooling.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory
            port:
              number: 8082
  tls:
  - hosts:
    - "tooling.artifactory.bomatooling.xyz"
    secretName: "tooling.artifactory.bomatooling.xyz"
